--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -67,7 +67,7 @@
           </span>
 
           <span class="h-12 w-12 rounded-full">
-            <img src="./images/user/user-01.png" alt="User" />
+            <img src="./images/user/user.png" alt="User" class="w-full rounded-full" />
           </span>
         </a>
 
